# aion-context

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  audit.toml  deny.toml
.claude/: settings.json
.claude/agents/: api-reviewer.md  crypto-auditor.md  drift-sentinel.md  perf-sentinel.md  rfc-writer.md  rust-gatekeeper.md
.claude/commands/: crypto-scan.md  drift-check.md  expert-review.md  hegel-audit.md  perf-audit.md  quality-gate.md  rfc-new.md  supply-chain-audit.md  tiger-audit.md
.claude/drift/: README.md  baseline.json  generate.sh  generate_sbom.sh  sbom.json
.claude/hooks/: lib.sh  post-edit-fmt-clippy.sh  pre-commit-branch-name.sh  pre-edit-rust-gate.sh  stop-drift-check.sh
.claude/rules/: README.md  api-design.md  concurrency.md  crypto.md  distributed.md  observability.md  property-testing.md  rfc-discipline.md  supply-chain.md  tiger-style.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: book.yml  ci.yml  drift.yml  scorecard.yml
benches/: crypto_benchmarks.rs  file_operations_benchmarks.rs  parser_benchmarks.rs  transparency_log_benchmarks.rs
book/: book.toml
book/src/: README.md  SUMMARY.md  comparison.md
book/src/architecture/: crypto.md  enforcement-receipt.md  file-format.md  hash-chain.md  observability.md  registry.md  release.md  stability.md  transparency-log.md
book/src/cli/: README.md  archive.md  inspect.md  key.md  lifecycle.md  registry.md  release.md
book/src/examples/: aegis.md  corpus_to_aion.md  federation.md  llm_policy_agent.md  policy_loop.md
book/src/getting-started/: mental-model.md  quickstart.md
book/src/operations/: audit.md  chain-architecture.md  rotation.md
book/src/reference/: glossary.md  rfcs.md
book/theme/css/: aion-extras.css
docs/: AUDIT_PREPARATION_CHECKLIST.md  DEVELOPER_GUIDE.md  PERFORMANCE.md  POSITIONING.md  README.md  SECURITY_AUDIT_GUIDE.md  SECURITY_CRITICAL_CODE.md  USER_GUIDE.md
docs/announcements/: 2026-04-25-aion-context-1.0.0.md
examples/: README.md  aegis_consortium.rs  corpus_to_aion.rs  federation_hw_attest.rs  llm_policy_agent.rs  policy_loop.rs  regenerate_fixtures.sh
examples/enterprise/: ai_governance_policy.yaml  enterprise_ai_governance.aion
examples/finance/: rules.yaml  trading_compliance.aion
examples/healthcare/: patient_data_rules.aion  rules.yaml
examples/legal/: contract_policy.aion  rules.yaml
examples/manufacturing/: quality_control.aion  rules.yaml
examples/retail/: pricing_rules.aion  rules.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_file_parser.rs  fuzz_manifest_canonical.rs  fuzz_registry_json.rs
rfcs/: RFC-0000-index.md  RFC-0001-architecture.md  RFC-0002-file-format.md  RFC-0003-cryptography.md  RFC-0004-key-management.md  RFC-0005-signature-chain.md  RFC-0006-threat-model.md  RFC-0007-rust-conventions.md  RFC-0008-error-handling.md  RFC-0009-testing-strategy.md  RFC-0010-data-structures.md  RFC-0011-serialization.md  RFC-0012-versioning.md  RFC-0013-sync-protocol.md  RFC-0014-multi-signature.md  RFC-0015-conflict-resolution.md  RFC-0016-cli-interface.md  RFC-0018-performance.md  RFC-0019-audit-trail.md  RFC-0020-regulatory-compliance.md  RFC-0021-multisig-attestation.md  RFC-0022-external-artifact-manifest.md  RFC-0023-dsse-envelope.md  RFC-0024-slsa-provenance.md  RFC-0025-transparency-log.md  RFC-0026-hardware-attestation.md  RFC-0027-post-quantum-hybrid.md  RFC-0028-key-rotation-revocation.md  RFC-0029-aibom.md  RFC-0030-oci-packaging.md  RFC-0031-jcs-canonical-json.md  RFC-0032-release-orchestration.md  RFC-0033-post-audit-carryovers.md  RFC-0034-registry-aware-verify-rollout.md  RFC-0035-chain-architecture-guide.md  RFC-0036-enforcement-receipt.md  RFC-0037-crypto-rng-stack-upgrade.md  RFC-TEMPLATE.md
scripts/: add-spdx-headers.sh  install-hooks.sh
src/: aibom.rs  audit.rs  compliance.rs  conflict.rs  crypto.rs  dsse.rs  enforcement_receipt.rs  error.rs  export.rs  hw_attestation.rs  hybrid_sig.rs  jcs.rs  key_registry.rs  keystore.rs  lib.rs  manifest.rs  multisig.rs  obs.rs  oci.rs  operations.rs  parser.rs  release.rs  serializer.rs  signature_chain.rs  slsa.rs  string_table.rs  test_helpers.rs  transparency_log.rs  types.rs
tests/: cli_integration_tests.rs  crypto_test_vectors.rs  integration_tests.rs
