[package]
name = "aion-context"
version = "0.1.0"
edition = "2021"
authors = ["AION Context Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/copyleftdev/aion-context"
rust-version = "1.70"
description = "Cryptographically-signed, versioned business-context file format"
readme = "README.md"
keywords = ["cryptography", "versioning", "ai", "compliance", "signatures"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
# Cryptography - pinned versions for security
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"

# Zero-copy parsing
zerocopy = { version = "0.7", features = ["derive"] }
memmap2 = "0.9"

# Security - sensitive data handling
zeroize = { version = "1.7", features = ["derive"] }
keyring = "3.6"  # OS keyring integration for key storage
argon2 = "0.5"   # Password hashing for key export/import

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Random number generation
rand = "0.8"
serde_yaml = "0.9.34"

# Parallel processing
rayon = "1.10"
rpassword = "7.4.0"
dirs = "6.0.0"
hostname = "0.4.0"

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

# Fuzzing
arbitrary = { version = "1.3", features = ["derive"] }
hex = "0.4"

[features]
# Test helpers feature for integration tests
test-helpers = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

# Tiger Style: Zero tolerance for panics
[lints.rust]
# NOTE: "warn" (not "forbid") — the parser has one audited `unsafe`
# block for mmap lifetime extension, gated by a local `#[allow(...)]`.
# Any other `unsafe` use is a review flag.
unsafe_code = "warn"
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
# Critical: Deny all panic-inducing operations
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unreachable = "deny"
unimplemented = "deny"

# Warnings for potentially dangerous operations
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
float_arithmetic = "warn"

# Code quality (lower priority to allow specific denies above)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some pedantic lints that conflict with our style
too_many_arguments = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "file_operations_benchmarks"
harness = false

[[bench]]
name = "parser_benchmarks"
harness = false
