[package]
name = "aion-context"
version = "1.0.0"
edition = "2021"
authors = ["AION Context Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aion-context/aion-context"
homepage = "https://aion-context.dev"
documentation = "https://docs.rs/aion-context"
rust-version = "1.70"
description = "Cryptographically-signed, versioned business-context file format"
readme = "README.md"
keywords = ["cryptography", "versioning", "ai", "compliance", "signatures"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
# Cryptography - pinned versions for security
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.11"
# Constant-time comparisons for any secret-or-key-shaped bytes
# (crypto-rule: `==` on key bytes is a BLOCK, see .claude/rules/crypto.md).
subtle = "2.6"

# Post-quantum signatures (RFC-0027). pqcrypto-mldsa tracks FIPS 204
# ML-DSA via the C reference implementation.
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# RFC 8785 JSON Canonicalization Scheme (RFC-0031).
serde_jcs = "0.2"

# Encoding
hex = "0.4"
base64 = "0.22"

# Zero-copy parsing
zerocopy = { version = "0.7", features = ["derive"] }
memmap2 = "0.9"

# Security - sensitive data handling
zeroize = { version = "1.7", features = ["derive"] }
keyring = "3.6"  # OS keyring integration for key storage
argon2 = "0.5"   # Password hashing for key export/import

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Random number generation
rand = "0.8"
serde_yaml = "0.9.34"

# Parallel processing
rayon = "1.10"
rpassword = "7.4.0"
dirs = "6.0.0"
hostname = "0.4.0"

# Structured observability (RFC-0007 / observability rule).
# Library only depends on the `tracing` facade — no subscriber.
# `tracing-subscriber` is pulled in by the `aion` CLI binary path
# (the binary uses it to install a fmt+JSON subscriber driven by
# `AION_LOG` / `AION_LOG_FORMAT`).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Optional: minimal sync HTTP client for the `llm_policy_agent`
# example (issue #59). Gated by the `llm-agent-example` feature so
# the default build is unaffected. License: MIT/Apache-2.0.
ureq = { version = "2.10", default-features = false, features = ["tls", "json"], optional = true }

# Optional: tar + flate2 for the `corpus_to_aion` example (issue #61).
# Gated by the `corpus-tool` feature so the default build is unaffected.
# Both MIT/Apache-2.0.
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
# Property-based testing (see .claude/rules/property-testing.md).
# Requires `uv` on PATH at test time to launch the hegel-core backend;
# absent that, hegeltest self-installs a private copy to ~/.cache/hegel.
hegeltest = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

# Fuzzing
arbitrary = { version = "1.3", features = ["derive"] }
hex = "0.4"

[features]
# Test helpers feature for integration tests
test-helpers = []

# Pulls in `ureq` for the `llm_policy_agent` example (issue #59).
# Off by default — no network client in the standard build.
llm-agent-example = ["dep:ureq"]

# Pulls in `tar` + `flate2` for the `corpus_to_aion` example (issue #61).
# Off by default — no archive deps in the standard build.
corpus-tool = ["dep:tar", "dep:flate2"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

# Tiger Style: Zero tolerance for panics
[lints.rust]
# NOTE: "warn" (not "forbid") — the parser has one audited `unsafe`
# block for mmap lifetime extension, gated by a local `#[allow(...)]`.
# Any other `unsafe` use is a review flag.
unsafe_code = "warn"
missing_docs = "warn"
unused_must_use = "deny"

[lints.clippy]
# Critical: Deny all panic-inducing operations
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unreachable = "deny"
unimplemented = "deny"

# Warnings for potentially dangerous operations
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
float_arithmetic = "warn"

# Code quality (lower priority to allow specific denies above)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some pedantic lints that conflict with our style
too_many_arguments = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Pedantic lints that require API-breaking changes or are pure
# cosmetic preference. Named explicitly so a reader can see the
# rationale instead of wondering whether to fix a warning.
unreadable_literal = "allow"          # digit grouping is style preference; a 10-digit epoch-ns reads fine without underscores
inconsistent_digit_grouping = "allow" # same — existing groupings are domain-appropriate
unnecessary_wraps = "allow"           # private helpers keep Result for symmetry with callers that may grow fallible later
struct_excessive_bools = "allow"      # VerificationSummary is a public API; its bool shape is the honest contract
ref_option = "allow"                  # serde serialize-fn signature demands &Option<T> — not our choice
cast_possible_truncation = "allow"    # bounded by invariants (file counts fit in usize, version numbers small)
cast_possible_wrap = "allow"          # deliberate in clock-skew / timestamp math where saturating semantics match intent
cast_sign_loss = "allow"              # deliberate in i64 → u64 day counters
format_push_string = "allow"          # writeln!/write! do not round-trip cleanly through a mut String in all our cases; push_str(&format!()) is fine
format_in_format_args = "allow"       # outer format! + inner format! is the clearest form for per-entry hex truncation

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "file_operations_benchmarks"
harness = false

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "transparency_log_benchmarks"
harness = false

[[example]]
name = "federation_hw_attest"
required-features = ["test-helpers"]

[[example]]
name = "llm_policy_agent"
required-features = ["llm-agent-example"]

[[example]]
name = "corpus_to_aion"
required-features = ["corpus-tool"]
