[package]
name = "aion-context-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.aion-context]
path = ".."

[[bin]]
name = "fuzz_file_parser"
path = "fuzz_targets/fuzz_file_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_manifest_canonical"
path = "fuzz_targets/fuzz_manifest_canonical.rs"
test = false
doc = false

[[bin]]
name = "fuzz_registry_json"
path = "fuzz_targets/fuzz_registry_json.rs"
test = false
doc = false
